2009-10-30  Stas Boukarev  <stassats@gmail.com>

	* swank-loader.lisp (setup): Use EXT:PROBE-DIRECTORY on Clisp,
	because PROBE-FILE doesn't want to work on directories.
	Patch by Dirk Sondermann.

2009-10-30  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp: Removed. 1.4 is out so no longer needed.
	* swank-ccl.lisp: Update accordingly.

	* test-all.sh: Removed. Not used in ages.

2009-10-28  Helmut Eller  <heller@common-lisp.net>

	Simpler modeline code.

	* slime.el (slime-modeline-string): Renamed from
	slime-compute-modeline-string.
	(slime-modeline-state-string): Renamed from
	slime-compute-connection-state
	(slime-modeline-package, slime-modeline-connection-name)
	(slime-modeline-connection-state)
	(slime-extended-modeline,slime-compute-modeline-package)
	(slime-update-modeline-string, slime-shall-we-update-modeline-p)
	(slime-update-all-modelines, slime-modeline-update-timer)
	(slime-restart-or-init-modeline-update-timer)
	(slime-connection-state-as-string): Deleted
	(slime-stale-connection-p): Deleted.

2009-10-28  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-disconnect): Don't reference connection.  Left
	over from last change.
	([test] arglist): Update expected results for slightly changed
	printer settings.
	([test] indentation): Install common-lisp-indent-function.
	([undefun] display-warning): Fix it.

	* test.sh: Don't copy contribs. Slime should work without them.
	* swank-loader.lisp (setup): Compile contribs only if directory
	exists.

2009-10-28  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-format-display-message, slime-display-message)
	(slime-create-message-window): Deleted.  The trick with the
	pre-command-hook doesn't work in XEmacs 21.5.  So use the standard
	message function.  One day XEmacs will learn how to resize the
	minibuffer, but until then we have to live with one-line messages.

2009-10-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Fix some docstrings and comments.
